[package]
name = "rust-pake"
description = "An alternative implementation in rust for @schollz's pake library"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
aes-gcm = "0.10.3"
anyhow = "1.0.79"
hex = "0.4.3"
log = "0.4.20"
num-bigint-dig = "0.8.4"
num-traits = "0.2.18"
once_cell = "1.19.0"
pbkdf2 = "0.12.2"
rand = "0.8.5"
serde = "1.0.196"
serde_json = "1.0.113"
serde_repr = "0.1.18"
serde_with = "3.6.0"
sha2 = "0.10.8"
thiserror = "1.0.56"
